test y web acabados

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,25 +1,23 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">
-            <img alt="Logo" class="d-inline-block align-text-top" height="30" src="/images/favicon.png" width="30">
-            Mis funkos CRUD 2º DAW
+            <img alt="Logo" class="d-inline-block align-text-top m-1" height="70" src="/imagenes/logo.png" width="70">
         </a>
         <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-target="#navbarNav" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/funkos/logout">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/funkos">Funkos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/funkos/create">Nuevo Funko</a>
-                </li>
-            </ul>
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn btn-dark" href="/funkos/logout">Salir</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-dark" href="/funkos">Home</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </header>
