--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Crear Funko</title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-    <script crossorigin="anonymous"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 
 </head>
 <body>
@@ -16,39 +18,39 @@
 
     <h1>Crear Funko</h1>
     <form action="/funkos/create" method="post" th:object="${funko}">
-        <div class="form-group">
-            <label for="nombre">Nombre:</label>
-            <input class="form-control" id="nombre" name="nombre" th:field="*{nombre}"
+        <div class="form-group justify-content-center">
+            <label for="nombre"></label>
+            <input class="form-control rounded-pill" id="nombre" name="nombre" placeholder="Nombre"
                    type="text">
             <small class="text-danger" th:errors="*{nombre}" th:if="${#fields.hasErrors('nombre')}"></small>
         </div>
         <div class="form-group">
-            <label for="precio">Precio:</label>
-            <input class="form-control" id="precio" min="0.0" name="precio" step="0.01" th:field="*{precio}"
+            <label for="precio"></label>
+            <input class="form-control rounded-pill" id="precio" min="0.0" name="precio" placeholder="Precio" step="0.01"
                    type="number">
             <small class="text-danger" th:errors="*{precio}" th:if="${#fields.hasErrors('precio')}"></small>
         </div>
         <div class="form-group">
-            <label for="imagen">Imagen:</label>
-            <input class="form-control" id="imagen" name="imagen" readonly th:field="*{rutaImagen}" type="text">
+            <label for="imagen"></label>
+            <input class="form-control rounded-pill" id="imagen" name="imagen" placeholder="Imagen" type="text">
             <small class="text-danger" th:errors="*{rutaImagen}"></small>
         </div>
         <div class="form-group">
-            <label for="stock">Cantidad:</label>
-            <input class="form-control" id="stock" min="0" name="cantidad" th:field="*{cantidad}" type="number">
+            <label for="stock"></label>
+            <input class="form-control rounded-pill" id="stock" min="0" name="cantidad" placeholder="Cantidad" type="number">
             <small class="text-danger" th:errors="*{cantidad}" th:if="${#fields.hasErrors('cantidad')}"></small>
         </div>
         <div class="form-group">
-            <label for="categoria">Categoría:</label>
-            <select class="form-control" id="categoria" name="categoria" th:field="*{categoria}">
+            <label for="categoria"></label>
+            <select class="form-control rounded-pill" id="categoria" name="categoria" th:field="*{categoria}">
                 <option value="">Seleccione una categoría</option>
                 <option th:each="cat : ${categorias}" th:selected="${cat == categorias}" th:text="${cat}"
                         th:value="${cat}"></option>
             </select>
             <small class="text-danger" th:errors="*{categoria}" th:if="${#fields.hasErrors('categoria')}"></small>
         </div>
-        <button class="btn btn-primary" type="submit">Crear</button>
-        <a class="btn btn-secondary mx-2" href="/funkos">Volver</a>
+        <button class="btn btn-primary border rounded-pill m-1" type="submit">Crear</button>
+        <a class="btn btn-secondary mx-2 border rounded-pill m-1" href="/funkos">Volver</a>
     </form>
 </div>
 
