--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -3,35 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalles del Funko</title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-    <script crossorigin="anonymous"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
-<body>
+<body id="bodyId">
 <div class="container">
     <div th:replace="~{header.html :: header}"></div>
 
-    <h1>Detalles del Funko</h1>
-    <dl class="row">
-        <dt class="col-sm-2">ID:</dt>
-        <dd class="col-sm-10" th:text="${funko.id}"></dd>
-        <dt class="col-sm-2">Precio:</dt>
-        <dd class="col-sm-10" th:text="${funko.precio}"></dd>
-        <dt class="col-sm-2">Imagen:</dt>
-        <dd class="col-sm-10"><img alt="Funko Image" class="img-fluid" th:src="${funko.rutaImagen}"></dd>
-        <dt class="col-sm-2">Stock:</dt>
-        <dd class="col-sm-10" th:text="${funko.cantidad}"></dd>
-        <dt class="col-sm-2">Categoría:</dt>
-        <dd class="col-sm-10" th:text="${funko.categoria}"></dd>
-    </dl>
-    <a class="btn btn-primary" href="/funkos">Volver</a>
+    <div class="card mx-auto mt-5" style="max-width: 600px;">
+        <div class="card-header">
+            <h1 class="card-title text-center" th:text="${funko.nombre}"></h1>
+        </div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-2">ID</dt>
+                <dd class="col-sm-10" th:text="${funko.id}"></dd>
+                <dt class="col-sm-2">Precio</dt>
+                <dd class="col-sm-10" th:text="${funko.precio}"></dd>
+                <dt class="col-sm-2">Imagen</dt>
+                <dd class="col-sm-10"><img alt="Funko Image" class="img-fluid" th:src="${funko.rutaImagen}"></dd>
+                <dt class="col-sm-2">Stock</dt>
+                <dd class="col-sm-10" th:text="${funko.cantidad}"></dd>
+                <dt class="col-sm-2">Categoría</dt>
+                <dd class="col-sm-10" th:text="${funko.categoria.name}"></dd>
+            </dl>
+            <a class="btn btn-primary d-block mx-auto border rounded-pill" href="/funkos">Volver</a>
+        </div>
+    </div>
 </div>
-
 <div th:replace="~{footer.html :: footer}"></div>
-
-
 </body>
 </html>
