--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,4 +1,18 @@
-<footer class="mt-4 text-center">
-    <hr>
-    <p>CRUD de Funkos Eva Gómez Uceda 2º DAW</p>
+<footer class="bg-dark text-light text-center py-3">
+    <div class="container">
+            <div>
+                <section class="mb-4">
+
+                    <a class="btn text-white btn-floating m-1" style="background-color: #6abfda;" href="https://twitter.com/evagmzzz" role="button"><i
+                            class="bi bi-twitter"></i></a>
+
+                    <a class="btn text-white btn-floating m-1" style="background-color: #ff67ea;" href="https://www.instagram.com/evagmezz/" role="button"><i
+                            class="bi bi-instagram"></i></a>
+
+                    <a class="btn text-white btn-floating m-1" style="background-color: #5e5555;" href="https://github.com/evagmezz" role="button"><i
+                            class="bi bi-github"></i></a>
+                </section>
+            </div>
+        </div>
+        <p class="m-0 text-center text-white">Funkos &copy; Eva Gómez 2023</p>
 </footer>
