--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,84 +1,86 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Funkos</title>
-
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-    <script crossorigin="anonymous"
+    <title>Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
-<body>
-<div class="container">
-    <div th:replace="~{header.html :: header}"></div>
-
-    <h1>Compra / Venta de Funkos</h1>
-    <form action="/funkos/" class="mb-3" method="get">
-        <div class="input-group">
-            <input class="form-control" id="search" name="search" th:value="${search}" type="text">
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="submit">Buscar</button>
+<body id="bodyId">
+<div th:replace="~{header.html :: header}"></div>
+<div class="container mb-4">
+    <form action="/funkos/" class="mb-3 my-4 w-50" method="get">
+        <div class="row mt-5">
+            <div class="col-md-5 ml-auto">
+                <div class="input-group">
+                    <input class="form-control" name="search" type="text" th:value="${search}" placeholder="search"
+                           id="search">
+                </div>
             </div>
         </div>
     </form>
-    '
     <table class="table">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th>Imagen</th>
-            <th>Acciones</th>
+            <th class="text-center align-middle">Nombre</th>
+            <th class="text-center align-middle">Precio</th>
+            <th class="text-center align-middle">Categoria</th>
+            <th class="text-center align-middle">Imagen</th>
+            <th class="text-center align-middle">Acciones</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="funko : ${funkosPage.content}">
-            <td th:text="${funko.id}"></td>
-            <td th:text="${funko.precio}"></td>
-            <td th:text="${funko.cantidad}"></td>
-            <td>
+            <td class="text-center align-middle" th:text="${funko.nombre}"></td>
+            <td class="text-center align-middle" th:text="${funko.precio}"></td>
+            <td class="text-center align-middle" th:text="${funko.categoria.name}"></td>
+            <td class="text-center align-middle">
                 <img alt="Imagen del funko" height="100" th:src="${funko.rutaImagen}" width="100px">
             </td>
-            <td>
-                <a class="btn btn-primary btn-sm" th:href="@{/funkos/details/{id}(id=${funko.id})}">Detalles</a>
-                <a class="btn btn-secondary btn-sm" th:href="@{/funkos/update/{id}(id=${funko.id})}">Editar</a>
-                <a class="btn btn-info btn-sm" th:href="@{/funkos/update-image/{id}(id=${funko.id})}">Imagen</a>
-                <a class="btn btn-danger btn-sm" th:href="@{/funkos/delete/{id}(id=${funko.id})}">Eliminar</a>
+            <td class="text-center align-middle">
+                <a class="btn btn-primary btn-sm border rounded-pill" th:href="@{/funkos/details/{id}(id=${funko.id})}">Detalles</a>
+                <a class="btn btn-secondary btn-sm border rounded-pill"
+                   th:href="@{/funkos/update/{id}(id=${funko.id})}">Editar</a>
+                <a class="btn btn-info btn-sm border rounded-pill"
+                   th:href="@{/funkos/update-image/{id}(id=${funko.id})}">Imagen</a>
+                <a class="btn btn-danger btn-sm border rounded-pill" th:href="@{/funkos/delete/{id}(id=${funko.id})}">Eliminar</a>
             </td>
         </tr>
         </tbody>
     </table>
+
+
     <nav aria-label="Page navigation">
-        <ul class="pagination">
+        <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${funkosPage.first ? 'disabled' : ''}">
                 <a class="page-link"
-                   th:href="@{${funkosPage.first ? '#' : '/funkos/index'}(page=0, size=${funkosPage.size}, sort=${funkosPage.pageable.sort})}">&laquo;</a>
-            </li>
-            <li class="page-item" th:classappend="${funkosPage.first ? 'disabled' : ''}">
-                <a class="page-link"
-                   th:href="@{${funkosPage.first ? '#' : '/funkos/index'}(page=${funkosPage.number - 1}, size=${funkosPage.size}, sort=${funkosPage.pageable.sort})}">Anterior</a>
+                   th:href="@{${funkosPage.first ? '#' : '/funkos/index'}(page=0, size=${funkosPage.size}, sort=${funkosPage.pageable.sort})}">&laquo;
+                    Anterior</a>
             </li>
             <li class="page-item" th:classappend="${funkosPage.last ? 'disabled' : ''}">
                 <a class="page-link"
-                   th:href="@{${funkosPage.last ? '#' : '/funkos/index'}(page=${funkosPage.number + 1}, size=${funkosPage.size}, sort=${funkosPage.pageable.sort})}">Siguiente</a>
-            </li>
-            <li class="page-item" th:classappend="${funkosPage.last ? 'disabled' : ''}">
-                <a class="page-link"
-                   th:href="@{${funkosPage.last ? '#' : '/funkos/index'}(page=${funkosPage.totalPages - 1}, size=${funkosPage.size}, sort=${funkosPage.pageable.sort})}">&raquo;</a>
+                   th:href="@{${funkosPage.last ? '#' : '/funkos/index'}(page=${funkosPage.number + 1}, size=${funkosPage.size}, sort=${funkosPage.pageable.sort})}">Siguiente
+                    &raquo;</a>
             </li>
         </ul>
     </nav>
-    <a class="btn btn-success" href="/funkos/create">Nuevo Funko</a>
 
-    <p class="mt-4 text-center" style="font-size: smaller;">
-        <span>Nº de visitas: </span><span th:text="${numVisitas}"></span>
-        <span>, desde tu último login: </span>
-        <span th:text="${lastLoginDate}"></span>
-    </p>
+    <div class="container w-75 d-flex">
+        <a class="btn btn-primary w-50 mx-auto border rounded-pill" href="/funkos/create">Crear</a>
+    </div>
 
+    <div class="container mt-4">
+        <p class="mt-4 text-center" style="font-size: smaller;">
+            <span>Nº de visitas: </span><span th:text="${numVisitas}"></span>
+            <span>, desde tu último login: </span>
+            <span th:text="${lastLoginDate}"></span>
+        </p>
+    </div>
 </div>
 <div th:replace="~{footer.html :: footer}"></div>
 </body>
