--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-    <script crossorigin="anonymous"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+
 </head>
-<body>
+<body class="d-flex align-items-center justify-content-center vh-100">
 <div class="container">
-    <h1>Login</h1>
-    <form action="/funkos" method="post">
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input class="form-control" id="password" name="password" required type="password">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h1 class="text-center">Login</h1>
+            <form action="/funkos" method="post">
+                <div class="form-group d-flex justify-content-center w-100">
+                    <label for="password"></label>
+                    <input class="form-control m-2 w-50" id="password" name="password" placeholder="Password" required
+                           type="password">
+                </div>
+                <div class=" d-flex justify-content-center w-100">
+                    <button class="btn btn-primary m-2 w-50" type="submit" id="loginButton">Login</button>
+                </div>
+                <div th:if="${error}">
+                    <p style="color: red;" th:text="${error}"></p>
+                </div>
+            </form>
         </div>
-        <div th:if="${error}">
-            <p style="color: red;" th:text="${error}"></p>
-        </div>
-        <button class="btn btn-primary" type="submit">Login</button>
-    </form>
+    </div>
 </div>
-
 <div th:replace="~{footer.html :: footer}"></div>
-
-
 </body>
 </html>
