--- a/src/main/resources/templates/update-img.html
+++ b/src/main/resources/templates/update-img.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>Actualizar Funko</title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-    <script crossorigin="anonymous"
+    <title>Actualizar Imagen Funko</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
-<body>
+
+<body id="bodyId">
 <div class="container">
     <div th:replace="~{header.html :: header}"></div>
 
-    <h1>Actualizar Imagen Funko</h1>
-
-    <dl class="row">
-        <dt class="col-sm-2">ID:</dt>
-        <dd class="col-sm-10" th:text="${funko.id}"></dd>
-        <dt class="col-sm-2">Imagen:</dt>
-        <dd class="col-sm-10"><img alt="Funko image" class="img-fluid" th:src="${funko.rutaImagen}"></dd>
-    </dl>
-
-    <form action="@{/funkos/update-image/{id}(id=${id})}"
-          enctype="multipart/form-data"
-          method="post"
-          th:action="@{/funkos/update-image/{id}(id=${id})}"
-          th:object="${funko}"
-    >
-
-        <div class="form-group">
-            <label for="imagen">Imagen:</label>
-            <input accept="image/*" class="form-control-file" id="imagen" name="imagen" required type="file">
-            <small class="text-danger" th:errors="*{getRutaImagen}" th:if="${#fields.hasErrors('rutaImagen')}"></small>
-            <input name="id" th:value="${funko.id}" type="hidden">
+    <div class="card mx-auto mt-5" style="max-width: 600px;">
+        <div class="card-header">
+            <h1 class="card-title text-center" th:text="${funko.nombre}"></h1>
         </div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-2">Imagen:</dt>
+                <dd class="col-sm-10"><img alt="Funko image" class="img-fluid" th:src="${funko.rutaImagen}"></dd>
+            </dl>
 
-        <button class="btn btn-primary" type="submit">Actualizar</button>
-        <a class="btn btn-secondary mx-2" href="/funkos">Volver</a>
-    </form>
+            <form action="@{/funkos/update-image/{id}(id=${id})}" enctype="multipart/form-data" method="post"
+                  th:action="@{/funkos/update-image/{id}(id=${id})}" th:object="${funko}">
+
+                <div class="form-group">
+                    <label for="imagen">Imagen:</label>
+                    <input accept="image/*" class="form-control-file" id="imagen" name="imagen" required type="file">
+                    <small class="text-danger" th:errors="*{getRutaImagen}"
+                           th:if="${#fields.hasErrors('rutaImagen')}"></small>
+                    <input name="id" th:value="${funko.id}" type="hidden">
+                </div>
+
+                <button class="btn btn-primary border rounded-pill m-2" type="submit">Actualizar</button>
+                <a class="btn btn-secondary mx-2 border rounded-pill m-2" href="/funkos">Volver</a>
+            </form>
+        </div>
+    </div>
 </div>
-
 <div th:replace="~{footer.html :: footer}"></div>
-
 </body>
+
 </html>
